Fix: rsyslog tag in config files

--- a/templates/default/rsyslog_logentries.conf.erb
+++ b/templates/default/rsyslog_logentries.conf.erb
@@ -2,7 +2,7 @@
 
 $InputFileName <%= @log_filename %>
 <% if @rsyslog_tag %>
-$InputFileTag <%= @rsyslog_tag %>
+$InputFileTag <%= "#{@rsyslog_tag}:" %>
 <% end %>
 $InputFileStateFile <%= @state_file %>
 <% if @syslog_facility %>
